examples/tests/invalid/container_types.w
//Array tests
let arr1: Array<num> = [1, "2", 3];
let arr2 = Array<num> {1, 2, 3};

//Map tests
let m1: Map<num> = {"a":1, "b":"2", "c":3};
let m2: Map<num> = ["a":1, "b":"2", "c":3];

//Set tests
let s1: Set<num> = {1, "2", 3};
let s2 = Set<num> [1, "2", 3];
let s3: Set<num> = [1, "2", 3];